# homework_ai_agents

03-multimodal/: .env.example  README.md  pyproject.toml
03-multimodal/docs/: idea.md  tasklist.md  vision.md
03-multimodal/prompts/: system_prompt_audio.txt
03-multimodal/src/: audio_converter.py  bot.py  config.py  exceptions.py  finance_service.py  handlers.py  llm.py  llm_client.py  models.py
04-rag-langchain/: .env.example  README.md  pyproject.toml
04-rag-langchain/.qoder/rules/: conventions.md
04-rag-langchain/docs/: idea.md  tasklist.md  vision.md
04-rag-langchain/docs/adrs/: 002-use-openrouter-as-llm-provider.md
04-rag-langchain/prompts/: system_prompt.txt
04-rag-langchain/src/: bot.py  config.py  conversation_store.py  document_loader.py  handlers.py  llm_client.py  rag_conversation_store.py  rag_service.py  report_formatter.py
04-rag-langchain/src/handlers/: __init__.py  errors.py  finance_router.py  rag_router.py  root.py  texts.py
04-rag-langchain/src/rag/: __init__.py  corpus_indexer.py
05-monitoring-qa/: .env.example  README.md  pyproject.toml
05-monitoring-qa/docs/: idea.md  tasklist.md  vision.md
05-monitoring-qa/prompts/: rag_answer_system.txt  rag_query_transform.txt
05-monitoring-qa/src/: bot.py  config.py  dataset_item.py  dataset_synthesizer.py  evaluation.py  exceptions.py  rag_service.py  transaction_store.py
06-advanced-rag/: .env.example  Makefile  README.md  pyproject.toml  report.md
06-advanced-rag/datasets/: 05-rag-qa-dataset.json
06-advanced-rag/docs/: idea.md  tasklist.md  vision.md
(+27 files in other folders)
